update navbar css

--- a/Stopaholic/Stopaholic/Components/Layout/NavMenu.razor.css
+++ b/Stopaholic/Stopaholic/Components/Layout/NavMenu.razor.css
@@ -9,7 +9,7 @@
 .navbar-brand {
     font-family: 'Playfair Display', serif; /* Elegant font for branding */
     font-size: 1.75rem;
-    color: #ecf0f1; /* Light color for contrast */
+    color: #435f3a; /* Light color for contrast */
 }
 
 .navbar-nav .nav-item {
