--- a/Stopaholic/Stopaholic/Components/Layout/NavMenu.razor
+++ b/Stopaholic/Stopaholic/Components/Layout/NavMenu.razor
@@ -1,5 +1,5 @@
-﻿<div class="navbar navbar-expand-lg custom-navbar">
-    <div class="container-fluid">
+﻿<div class= "top-row">
+    <div >
         <a class="navbar-brand" href="/">Stopaholic</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
