Remove default code and update the nav menu

--- a/Stopaholic/Stopaholic/Components/Layout/NavMenu.razor
+++ b/Stopaholic/Stopaholic/Components/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div  id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
@@ -12,13 +12,8 @@
                     </NavLink>
                 </li>
                 <li class="nav-item">
-                    <NavLink class="nav-link" href="counter">
-                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-                    </NavLink>
-                </li>
-                <li class="nav-item">
-                    <NavLink class="nav-link" href="weather">
-                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+                    <NavLink class="nav-link" href="month">
+                        <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Month
                     </NavLink>
                 </li>
             </ul>
