--- a/Stopaholic/Stopaholic/Components/Pages/Month.razor
+++ b/Stopaholic/Stopaholic/Components/Pages/Month.razor
@@ -1,9 +1,9 @@
-﻿@page "/weather"
+﻿@page "/month"
 @attribute [StreamRendering]
 
-<PageTitle>Weather</PageTitle>
+<PageTitle>Month</PageTitle>
 
-<h1>Weather</h1>
+<h1>Monthly view add which month you are on here</h1>
 
 <p>This component demonstrates showing data.</p>
 
